src/components/Testimonials/Testimonials.css
 .testimonials-container {
  margin-top: 15rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8rem;
}
.mobile-arrows {
  display: none;
  margin-top: 2rem;
  gap: 2rem;
}
.testimonials-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.4rem;
  h3 {
    font-family: "Raleway";
    font-weight: 700;
    font-style: Bold;
    font-size: 4.8rem;
    line-height: 130%;
    letter-spacing: 0%;
    text-align: center;
  }
  p {
    font-family: "Outfit";
    font-weight: 500;
    font-style: Medium;
    font-size: 1.6rem;
    line-height: 150%;
    max-width: 88rem;
    text-align: center;
  }
}
.testimonials {
  display: flex;
  gap: 4rem;
  min-width: 0;
  position: relative;
  .left-arrow,
  .right-arrow {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top:50%;
    button.arrow-button {
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 1.2rem;
      background-color: #fff;
      border: 2px solid #000;
      cursor: pointer;
      border-radius: 8px;
    }

  }
   .left-arrow{
      left:-7rem;
    }
    
    .right-arrow{
      right:-7rem;
    }
 .slider-window {
  overflow: hidden;
   width: fit-content;
   min-width: 0;
  }

.slider-track {
  display: flex;
  transition: transform 0.4s ease;
  will-change: transform;
  
}

.slide {
  flex: 0 0 33.333%;
  display: flex;
  justify-content: center;
}

}
.testimony {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 34rem;
  gap: 2.5rem;
  background-color: #fff;
  border: 2px solid #262626;
  border-radius: 1rem;
  box-shadow: 4px 4px 0px 2px #1e1e1e;
  padding: 4rem;
  .testimony-header {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    p {
      font-family: "Outfit";
      font-weight: 600;
      font-style: "SemiBold";
      font-size: 2rem;
      line-height: 150%;
      text-align: center;
    }
  }
  .profile-container {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    background-color: #fff5f0;
    border: 1px solid #000;
    width: 6.5rem;
    height: 6.5rem;
    img {
      width: 5rem;
      height: 5rem;
    }
  }
  .ratings {
    display: flex;
    gap: 4px;
  }
  .testimony-details {
    p {
      font-family: "Outfit";
      font-weight: 500;
      font-style: "Medium";
      font-size: 1.6rem;
      line-height: 150%;
      text-align: center;
      max-width: 28rem;
    }
  }
}
@media screen and (max-width: 1650px) {
  .slide { 
    max-width: 50%;
    flex: 0 0 50% !important;
  }
}
@media screen and (max-width: 1300px) {
  .testimonials {
    flex-wrap: wrap;
    justify-content: center;
      .left-arrow{
      left:-1em !important;
    }
    
    .right-arrow{
      right:-1rem !important;
    }
    
  }
  
}
@media screen and (max-width: 1100px) {
  .testimonials .left-arrow,
  .testimonials .right-arrow {
    display: none !important;
  }
  .testimony{
    padding:1.5rem
  }
  .mobile-arrows {
    display: flex;
    justify-content: center;
    align-items: center;
    button.arrow-button {
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 1.2rem;
      background-color: #fff;
      border: 2px solid #000;
      cursor: pointer;
      border-radius: 8px;
    }
  }
  .slide {
    flex: 0 0 100% !important;
    max-width: 100%;
  
  }
} 

